<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pastel Em Londres</string>
    <string name="encomenda_pastel">Encomenda Pastel</string>
    <string name="um_pastel">Um Pastel</string>
    <string name="tres_pasteis">Três Pasteis</string>
    <string name="seis_pasteis">Seis Pasteis</string>
    <string name="choose_flavor">Choose Filling</string>
    <string name="pizza">Pizza</string>
    <string name="carne">Carne</string>
    <string name="queijo">Queijo</string>
    <string name="frango">Frango</string>
    <string name="calabresa_com_queijo">Calabresa com queijo</string>
    <string name="frango_com_queijo">Frango com queijo</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="outra_quantidade">Outra Quantidade</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="choose_filling_and_quantity">Choose Filling and Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>